# GameWatch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  pushdeerclient.cpp  pushdeerclient.h  windowmonitor.cpp  windowmonitor.h  windowmonitor_mac.mm  windowmonitor_win.cpp
.github/workflows/: build.yml
dd373/: dd373dialog.cpp  dd373dialog.h  dd373item.h  dd373scraper.cpp  dd373scraper.h
